# Flex-Forum-Back-End

./: .gitignore  Cargo.toml
migrations/: 20240501215051_users.sql  20240503021204_init.sql  20240603051859_users_index.sql  20240603052555_posts_init.sql  20240622214059_posts_likes_comments.sql  20240721003127_exercise_preset_1.sql  20240801174901_profile_picture.sql  20240824163834_following_and_comments.sql  20240826015841_seen_posts.sql
src/: main.rs
src/lib/: ctx.rs  error.rs  hash_scheme.rs  jwt.rs  mod.rs  responses.rs  validation.rs
src/libs/: ctx.rs  hash_scheme.rs  jwt.rs  mod.rs  validation.rs
src/libs/ctx/: Cargo.toml  lib.rs
src/libs/jwt/: Cargo.toml  error.rs
src/libs/lib-ctx/: Cargo.toml
src/libs/lib-hash/: Cargo.toml  error.rs  hash_scheme.rs  lib.rs
src/libs/lib-hash/hashers/: argon2_v01.rs  argon2_v02.rs  mod.rs
src/libs/lib-hash/schemes/: argon2_v01.rs  hmac_v01.rs  mod.rs
src/libs/lib-jwt/: Cargo.toml  jwt.rs
src/libs/lib-models/: Cargo.toml  error.rs
src/libs/lib-multipart/: Cargo.toml  error.rs  lib.rs
src/libs/lib-routes/: Cargo.toml  error.rs  lib.rs  nested_route.rs
src/middleware/: auth.rs  auth_mw.rs  logger_mw.rs  mod.rs
src/models/: a_matrix_join_model.rs  base.rs  content_model.rs  exercise_preset_model.rs  following_model.rs  interactions_matrix_model.rs  likes_model.rs  mod.rs  profile_picture_model.rs  seen_posts_model.rs  user.rs  user_model.rs  user_models.rs
src/repositories/: hello_world.rs  mod.rs  user.rs  user_repo.rs
src/routes/: auth_route.rs  content_route.rs  exercise_preset_route.rs  hello_world.rs  login_signup_route.rs  mod.rs  user.rs  user_repo.rs  users.rs  users_route.rs
src/services/: auth.rs  hash_services.rs  mod.rs  multipart.rs  ndarray.rs  posts.rs  s3.rs  tensor.rs  user_services.rs
src/view_models/: login_view_models.rs  mod.rs  user_view_models.rs
