[package]
name = "flex-forum-back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-hash = { path = "src/libs/lib-hash" }
lib-ctx = { path = "src/libs/lib-ctx" }
lib-jwt = { path = "src/libs/lib-jwt" }
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["multipart"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.80"
tower-cookies = "0.10.0"
sqlb = "0.4.0"
serde_with = "3.8.1"
tower-http = { version = "0.5.2", features = ["cors"] }
axum_typed_multipart = "0.11.1"
tokio-util = { version = "0.7.11", features = ["io"] }
aws-sdk-s3 = { version = "1.38.0" }
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
serde_json = "1.0.120"
itertools = "0.13.0"
ndarray = "0.16.1"
rand = "0.8.5"
ndarray-rand = "0.15.0"
