[package]
name = "lib-routes"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = { version = "1.38.0" }
lib-models = { path = "../lib-models" }
lib-hash = { path = "../lib-hash" }
lib-multipart = { path = "../lib-multipart" }
axum = { version = "0.7.5" }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
jwt = { path = "../jwt" }
sqlx = { version = "0.7.4" }

[lib]
name = "lib_routes"
path = "lib.rs"
